@@ -1,0 +1,21 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::X509_EXTENSION : pointer {
+  
+  use Fn;
+  
+  # Class Methods
+  private static method new_with_pointer : Net::SSLeay::X509_EXTENSION ($pointer : Address, $options : object[] = undef) {
+    
+    my $self = new Net::SSLeay::X509_EXTENSION;
+    
+    Fn->set_pointer($self, $pointer);
+    
+    return $self;
+  }
+  
+  # Instance Methods
+  native method DESTROY : void ();
+  
+}
